--- a/templates/user/userprofile/userprofile.html
+++ b/templates/user/userprofile/userprofile.html
@@ -413,10 +413,10 @@
 																<td><strong>Last Name</strong></td>
 																<td>:{{user1.last_name}}</td>
 															</tr>
-															<tr>
+															{% comment %} <tr>
 																<td><strong>Phone Number</strong></td>
 																<td>:{{user1.phone_number}}</td>
-															</tr>
+															</tr> {% endcomment %}
 															<tr>
 																<td><strong>Email</strong></td>
 																<td>:{{user1.email}}</td>
