--- a/templates/user/cart/cart.html
+++ b/templates/user/cart/cart.html
@@ -212,7 +212,7 @@
                                     
                                     {% comment %} ///////////////////////////////////////////////////////// {% endcomment %}
 
-                                    {% comment %} <tr class="summary-shipping-row">
+                                    {% comment %} {% comment %} <tr class="summary-shipping-row">
                                         <td>
                                             <div class="custom-control custom-radio">
                                                 <input type="radio" id="free-shipping" name="shipping"
@@ -248,11 +248,11 @@
                                         <td>$20.00</td>
                                     </tr><!-- End .summary-shipping-row --> {% endcomment %}
 
-                                    {% comment %} <tr class="summary-shipping-estimate">
+                                  {% comment %} <tr class="summary-shipping-estimate">
                                         <td>Estimate for Your Country<br> <a href="#">Change address</a>
                                         </td>
                                         <td>&nbsp;</td>
-                                    </tr><!-- End .summary-shipping-estimate --> {% endcomment %}
+                                    </tr><!-- End .summary-shipping-estimate -->  {% endcomment %}
 
                                     <tr class="summary-total">
                                         <td>Total:</td>
