--- a/templates/user/shop/shop.html
+++ b/templates/user/shop/shop.html
@@ -2,19 +2,24 @@
 {% block title %}SHOP{% endblock title %}
 {% block body %}
 {% load static %}
+
+<style>.page-header {
+    background-image: url('{% static "template/assets/images/page-header-bg.jpg" %}');
+   
+}</style>
         <main class="main">
         	<div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
         		<div class="container">
-        			<h1 class="page-title">Boxed No Sidebar<span>Shop</span></h1>
+        			<h1 class="page-title"><span>Shop</span></h1>
         		</div><!-- End .container -->
         	</div><!-- End .page-header -->
             <nav aria-label="breadcrumb" class="breadcrumb-nav mb-2">
                 <div class="container">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url "home" %}">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Shop</a></li>
-                        <li class="breadcrumb-item"><a href="#">No Sidebar</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Boxed</li>
+                        {% comment %} <li class="breadcrumb-item"><a href="#">No Sidebar</a></li> {% endcomment %}
+                        {% comment %} <li class="breadcrumb-item active" aria-current="page">Boxed</li> {% endcomment %}
                     </ol>
                 </div><!-- End .container -->
             </nav><!-- End .breadcrumb-nav -->
@@ -28,23 +33,29 @@
 
                         <div class="toolbox-center">
                             <div class="toolbox-info">
-                                Showing <span>12 of 56</span> Products
+                                {% comment %} Showing <span>12 of 56</span> Products {% endcomment %}
                             </div><!-- End .toolbox-info -->
                         </div><!-- End .toolbox-center -->
 
         				<div class="toolbox-right">
-        					<div class="toolbox-sort">
-        						<label for="sortby">Sort by:</label>
-        						<div class="select-custom">
-									<select name="sortby" id="sortby" class="form-control">
-										<option value="popularity" selected="selected">Most Popular</option>
-										<option value="rating">Most Rated</option>
-										<option value="date">Date</option>
-									</select>
-								</div>
-        					</div><!-- End .toolbox-sort -->
-        				</div><!-- End .toolbox-right -->
-        			</div><!-- End .toolbox -->
+                            <div class="toolbox-sort">
+                                <label for="sortby"></label>
+                                <form id="shop-sorting" method="post" action="{% url 'shopsort' %}">
+                                    {% csrf_token %}  
+                                    <div class="select-custom">
+                                        <select name="sort_select" id="sort-select" class="form-control">
+
+                                            <option value="all" selected="selected">SORT</option>
+                                            <option value="aplus" >A TO Z</option>
+                                            <option value="aminus">Z TO A</option>
+                                            <option value="priceminus">HIGH LOW PRICE</option>
+                                            <option value="priceplus">LOW TO HIGH PRICE</option>
+                                        </select>
+                                    </div>
+                                    <input type="hidden" name="auto_submit" value="true">
+                                </form>
+                            </div><!-- End .toolbox-sort -->
+                        </div><!-- End .toolbox-right -->
 
                     <div class="products">
                         <div class="row">
