--- a/templates/base.html
+++ b/templates/base.html
@@ -192,7 +192,7 @@
 
                                 </li>
                                 <li>
-                                    <a href="category.html" class="sf-with-ul">Shop</a>
+                                    <a href="{% url "shop" %}" class="sf-with-ul">Shop</a>
 
                                     
                                 </li>
